# homework_second

./: CMakeLists.txt  Makefile  chain.dot  condensated.dot  main.cpp
include/: analytical.hpp  chart.hpp  drawer.hpp  graph.hpp  grapher.hpp  imitation.hpp  plotter.hpp  precision.hpp  simulation.hpp  types.hpp  utils.hpp
src/: analytical.cpp  chart.cpp  drawer.cpp  graph.cpp  grapher.cpp  imitation.cpp  plotter.cpp  precision.cpp  simulation.cpp  utils.cpp
